corrected cucumber test and performed migration to Java 17 features